# sky_pro

./: README.md  db.sqlite3  manage.py  pyproject.toml  pytest.ini
resume/: models.py  permissions.py  serializers.py  views.py
resume/migrations/: 0001_initial.py
resume_test/: asgi.py  settings.py  urls.py  wsgi.py
tests/: conftest.py  factories.py  fixtures.py
tests/tests_api/: resume_list_test.py  resume_update_test.py
